...
      visible={modalVisible}
      transparent
      animationType="slide"
      onRequestClose={resetAndClose}
    >
      <ModalContainer>
        <ModalContent testID="accept-ladder-match-modal">
          <CloseButton onPress={resetAndClose} testID="accept-ladder-match-close">
            <AntDesign name="close-circle" size={30} color="red" />
          </CloseButton>

          <Title>Accept Match</Title>
          <Subtitle>{ladder.name}</Subtitle>

          {match && (
            <MatchCard
              match={match}
              testID="accept-ladder-match-card"
...
